[tool.poetry]
name = "heizungsventil"
version = "0.1.0"
description = ""
authors = ["Julian David Rath <julian.rath@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
python-eq3bt = "^0.1.11"
paho-mqtt = "^1.5.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
